--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,22 +8,22 @@
 
 
     <RelativeLayout
-        android:layout_height="match_parent"
+        android:id="@+id/loadingPanel"
         android:layout_width="match_parent"
-        android:gravity="center"
-        android:visibility="gone"
-        android:elevation="2dp"
+        android:layout_height="match_parent"
         android:background="#7e9f22"
-        android:id="@+id/loadingPanel">
+        android:elevation="2dp"
+        android:gravity="center"
+        android:visibility="gone">
 
-    <ProgressBar
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:elevation="10dp"
-        android:background="#0c6e2a"
-        android:indeterminate="true"/>
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#0c6e2a"
+            android:elevation="10dp"
+            android:indeterminate="true" />
 
-</RelativeLayout>
+    </RelativeLayout>
 
     <EditText
         android:id="@+id/editText_login_username"
@@ -32,7 +32,7 @@
         android:layout_marginTop="108dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="user"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,6 +44,7 @@
         android:layout_marginTop="38dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:text="password"
         app:layout_constraintStart_toStartOf="@+id/editText_login_username"
         app:layout_constraintTop_toBottomOf="@+id/editText_login_username" />
 
@@ -56,6 +57,5 @@
         android:onClick="login"
         android:text="Login"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_login_password"
-         />
+        app:layout_constraintTop_toBottomOf="@+id/editText_login_password" />
 </android.support.constraint.ConstraintLayout>
