--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,22 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".Register">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/reg1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editText5"
         android:layout_width="262dp"
         android:layout_height="42dp"
-        android:layout_marginTop="188dp"
+        android:layout_marginTop="56dp"
         android:ems="10"
         android:hint="username"
         android:inputType="textPersonName"
@@ -34,7 +24,8 @@
         android:id="@+id/editText6"
         android:layout_width="263dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="136dp"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
@@ -53,14 +44,13 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/editText8"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.466" />
+        app:layout_constraintVertical_bias="0.204" />
 
     <EditText
         android:id="@+id/editText8"
         android:layout_width="267dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="76dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="56dp"
         android:ems="10"
         android:hint="email"
         android:inputType="textEmailAddress"
@@ -72,10 +62,10 @@
         android:layout_width="267dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="148dp"
         android:ems="10"
-        android:hint="confirm email"
-        android:inputType="textEmailAddress"
+        android:hint="confirm password"
+        android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText7" />
 
